# scandir-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bench_1.0.1.py  rumdl.toml
.github/scripts/: strip_local_patch.py
.github/workflows/: build-sdist.yml  ci.yml  publish-pypi.yml  publish-test-pypi.yml
.omo/run-continuation/: ses_16fc7cd6affed3EXOB3Q7MAnja.json  ses_173d2aebaffes7GwXHevBlMZJo.json  ses_1786fcb69ffexMkjelIibC0isf.json
graphify-out/: .graphify_python  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
pyscandir/: CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  upload.sh
pyscandir/benches/: benchmark.py
pyscandir/doc/: benchmarks.md
pyscandir/src/: direntry.rs  lib.rs  scandir.rs  toc.rs
pyscandir/src/common/: def.rs  mod.rs
pyscandir/src/count/: def.rs  mod.rs  worker.rs
pyscandir/src/scandir/: def.rs  mod.rs  worker.rs
pyscandir/src/walk/: mod.rs  worker.rs
pyscandir/tests/: test_scandir.py
scandir/: Cargo.toml  README.md
scandir/benches/: count.rs  scandir.rs  walk.rs
scandir/doc/: benchmarks.md  count.md
scandir/examples/: cifs_ctime_check.rs
scandir/src/: direntry.rs  lib.rs  options.rs  toc.rs
scandir/src/common/: def.rs  methods.rs  mod.rs
scandir/src/count/: def.rs  mod.rs  worker.rs
scandir/src/scandir/: def.rs  mod.rs  worker.rs
scandir/src/walk/: def.rs  mod.rs  worker.rs
scandir/tests/: scandir.rs
scandir/tests/common/: mod.rs
