[workspace]

resolver = "2"

members = ["scandir", "pyscandir"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
#panic = "abort"

[profile.release.build-override]
opt-level = 3

# Local development override: CI removes this section via
# .github/scripts/strip_local_patch.py to fall back to the git dep below.
[patch."https://github.com/Be90nia/jwalk-meta"]
jwalk-meta = { path = "../jwalk-meta" }
