[project]
name = "scandir-rs"
version = "3.0.3"
authors = [{ name = "Martin Bammer", email = "mrbm74@gmail.com" }]
description = "A fast file tree scanner written in Rust"
license = "MIT"
readme = "README.md"
dependencies = []
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
]

[build-system]
requires = ["setuptools", "wheel", "setuptools_rust", "maturin>=1.5.1"]
build-backend = "maturin"

[tool.maturin]
manylinux = "2_34"
strip = true
module-name = "scandir_rs"
include = [
    { path = "Cargo.toml", format = "sdist" },
    { path = "Cargo.lock", format = "sdist" },
    { path = "pyproject.toml", format = "sdist" },
    { path = "README.md", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "src/**/*", format = "sdist" },
    { path = "tests/**/*", format = "sdist" },
    { path = "examples/**/*", format = "sdist" },
]
exclude = ["../**", "**/target/**", "**/__pycache__/**"]

[tool.poetry.dependencies]
python = '>=3.10'
maturin = ">=1.13.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3"

[dependency-groups]
dev = [
    "pytest == 9.0.3",
    "dirty-equals == 0.11",
    "ruff == 0.15.14",
    "zizmor == 1.25.2",
    "typos == 1.46.3",
    "rumdl == 0.2.0",
]
bench = [
    "oyaml",
    "pyyaml",
    "ryaml",
    "ruamel-yaml",
    "polars == 1.41.1",
    "altair == 6.1.0",
    "py-cpuinfo == 9.0.0",
    "vl-convert-python == 1.9.0.post1",
]

[project.urls]
Source = "https://github.com/Be90nia/scandir-rs"
Homepage = "https://github.com/Be90nia/scandir-rs"
"Bug Tracker" = "https://github.com/Be90nia/scandir-rs/issues"
